[B]Retrospect v5.2.1 - Changelog - 2020-03-28[/B]

This version removes some methods from the Kodi Python ABI that have been removed. Because of this, Retrospect broke on Kodi Matrix. Besides this, a number of channel related issues were resolved.

[B]Framework related[/B]
* Removed: some debugging code
* Changed: moved a large part of the code from plugin.py into different `actions`
* Fixed: internal Youtube parsing

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: VRT.nu had some missing episodes (Fixes #1351)
* Fixed: NOS.nl issue with Kodi Matrix
* Updated: Kijk.nl moved to a GraphQL backend